# DRF-mastering

./: README.md  pyproject.toml
drf_crud/drf_crud/: settings.py  urls.py
drf_crud/simple_crud/: models.py  serializers.py  urls.py  views.py
drf_crud/simple_crud/migrations/: 0001_initial.py  0002_rename_descrtiption_tutorial_description.py
simple_web/helloworld/: views.py
simple_web/simple_web/: settings.py  urls.py
